--- a/Aplicacoes_para_Internet/2020-04-30/exercicios/questao-17/style.css
+++ b/Aplicacoes_para_Internet/2020-04-30/exercicios/questao-17/style.css
@@ -3,9 +3,11 @@
 }
 
 .col {
+    background-color: rgba(221, 89, 45, 0.918);
     display: flex;
     flex-direction: column;
     border: 1px solid #eee;
+    border-radius: 8px;
     width: 270px;
     padding-left: 5px;
     margin: 0 auto;
@@ -19,14 +21,15 @@
 }
 
 .display {
+    background-color: #fff;
     font-size: 20px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     margin-left: 5px;
-    margin-top: 5px;
+    margin-top: 10px;
     padding: 0 5px;
     width: 242px;
     border: 2px solid #ccc;
-    border-radius: 4px;
+    border-radius: 10px;
     height: 50px;
     line-height: 50px;
 }
@@ -37,12 +40,14 @@
     width: 60px;
     height: 60px;
     background-color: #fff;
-    border: 2px solid #ccc;
-    border-radius: 4px;
+    border: 1px solid #666;
+    border-radius: 10px;
     text-align: center;
     cursor: pointer;
 }
 
 .row button:hover {
-    background-color: #ccc;
+    color: #fff;
+    background-color: rgba(221, 89, 45, 0.918);
+    border: 1px solid #fff;
 }
